--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,3 +51,9 @@ a {
 #heroSection {
   background: url("/images/banner1.jpg");
 }
+
+@media only screen and (max-width: 800px) {
+  .service-card {
+    margin-bottom: 15px;
+  }
+}
