--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,14 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #f9f5f2;
+  --foreground: #4d4d4d;
+  --green: #83c057;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #4d4d4d;
+    --green: #83c057;
   }
 }
 
@@ -14,6 +16,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+
 }
 
 body {
@@ -46,7 +49,10 @@ a {
 }
 
 .bg-green {
-  background-color: #007c49 !important;
+  background-color: var(--green) !important;
+}
+.header-text {
+  color: var(--green) !important;
 }
 #heroSection {
   background: url("/images/banner1.jpg");
